code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Jul-2010 Mark Dexter
# [#21196] Save order disk not disabled when not in ordering sort
# [#20963] Articles » List All Categories and Rss not working
# [#21332] com_contact tabs aren't working in IE7 Patch
# [#20957] Batch processing of users is using old tables

12-Jul-2010 Jean-Marie Simonet
 # Getting rid of useless Options in mod latest and mod popular in back-end
 $ Typo in en-GB.ini + sorting strings
 # Getting rid of useless No Category option
 # [#21376] Beez2.0 and Beez5 (Angie Radtke)
 # Missing CSS in front-end Beez (Thanks Angie)
 # [#21363] stats module layout in Beez  Thanks Bill.
 # [#21373] Restore 1.5 ability for multiple categories for Most Read Content. Thanks Amy.
 # [#21372] Restore 1.5 ability for multiple categories for Module Article Newsflash. Thanks Amy.
 $ Consolidated some strings
 
 11-Jul-2010 Chris Davenport
 # Follow up to [#21311] - add missing key references for 3 menu items
 
11-Jul-2010 Mark Dexter
# Sample data fixes to assets table to clean up misc. acl issues (Elin Waring)
# [#21311] Fix Context Sensitive Help Problem
# Sample data fixes to joomla.sql for plugins (Elin Waring)
# Fix beez5 hide.js file (Angie Radtke)

11-Jul-2010 Jean-Marie Simonet
 # [#21366] * Checkin featured articles fails.
 # [#21365] Search manager - global options. Thanks Bill. + some string consolidation
 # [#21350] [PATCH] Language files in extension directory fail to load

09-Jul-2010 Jean-Marie Simonet
 $ Correcting strings

09-Jul-2010 Jean-Marie Simonet
 # [#21351] mod_login (Thanks Angie) + mod_languages html
 # [#21292] Images inserted into articles always go to the top in Firefox. Thanks Brad

08-Jul-2010 Mark Dexter
# Fixes to beez and beez5 templates (Angie Radtke)

08-Jul-2010 Jean-Marie Simonet
 # [#21341] Tinymce has a comma error in JS. Thanks Janich.